# pydtfe

./: .gitignore  .travis.yml  Density_map_2d.ipynb  Density_map_3d.ipynb  LICENSE.txt  README.md  __init__.py  ned_3d.py  pydtfe.py  pyproject.toml  requirements.txt  setup.py
density/: __init__.py  pydtfe.py  pydtfe.py~
density/tests/: test_pydtfe.py
pydtfe/: __init__.py  pydtfe.py
pydtfe/tests/: test_pydtfe.py
scripts/: Density_map_2d.ipynb  Density_map_3d.ipynb
tests/: test_pydtfe.py
